--- a/alembic.ini
+++ b/alembic.ini
@@ -61,7 +61,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = driver://library:library@localhost/biblioteca
+sqlalchemy.url = postgresql://library:library@db:5432/biblioteca
 
 
 [post_write_hooks]
